// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Hits Resolver should return as expected should provide sorting options 2`] = `
Object {
  "results": Object {
    "hits": Object {
      "items": Array [
        Object {
          "fields": Object {
            "actors": Array [
              "Christian Bale",
              "Heath Ledger",
              "Aaron Eckhart",
              "Michael Caine",
            ],
            "writers": Array [
              "Jonathan Nolan",
              "Christopher Nolan",
              "David S. Goyer",
              "Bob Kane",
            ],
          },
          "id": "tt0468569",
        },
        Object {
          "fields": Object {
            "actors": Array [
              "Tim Roth",
              "Amanda Plummer",
              "Laura Lovelace",
              "John Travolta",
            ],
            "writers": Array [
              "Quentin Tarantino",
              "Roger Avary",
            ],
          },
          "id": "tt0110912",
        },
        Object {
          "fields": Object {
            "actors": Array [
              "Noel Appleby",
              "Alexandra Astin",
              "Sean Astin",
              "David Aston",
            ],
            "writers": Array [
              "J.R.R. Tolkien",
              "Fran Walsh",
              "Philippa Boyens",
              "Peter Jackson",
            ],
          },
          "id": "tt0167260",
        },
        Object {
          "fields": Object {
            "actors": Array [
              "Morgan Freeman",
              "Andrew Kevin Walker",
              "Daniel Zacapa",
              "Brad Pitt",
            ],
            "writers": Array [
              "Andrew Kevin Walker",
            ],
          },
          "id": "tt0114369",
        },
        Object {
          "fields": Object {
            "actors": Array [
              "Michael Berryman",
              "Peter Brocco",
              "Dean R. Brooks",
              "Alonzo Brown",
            ],
            "writers": Array [
              "Lawrence Hauben",
              "Bo Goldman",
              "Ken Kesey",
              "Dale Wasserman",
            ],
          },
          "id": "tt0073486",
        },
        Object {
          "fields": Object {
            "actors": Array [
              "Russell Crowe",
              "Joaquin Phoenix",
              "Connie Nielsen",
              "Oliver Reed",
            ],
            "writers": Array [
              "David Franzoni",
              "John Logan",
              "William Nicholson",
            ],
          },
          "id": "tt0172495",
        },
        Object {
          "fields": Object {
            "actors": Array [
              "Andrew Lincoln",
              "Steven Yeun",
              "Chandler Riggs",
              "Norman Reedus",
            ],
            "writers": Array [
              "Frank Darabont",
            ],
          },
          "id": "tt1520211",
        },
        Object {
          "fields": Object {
            "actors": Array [
              "Jim Carrey",
              "Kate Winslet",
              "Gerry Robert Byrne",
              "Elijah Wood",
            ],
            "writers": Array [
              "Charlie Kaufman",
              "Michel Gondry",
              "Pierre Bismuth",
            ],
          },
          "id": "tt0338013",
        },
        Object {
          "fields": Object {
            "actors": Array [
              "Marlon Brando",
              "Martin Sheen",
              "Robert Duvall",
              "Frederic Forrest",
            ],
            "writers": Array [
              "John Milius",
              "Francis Ford Coppola",
              "Michael Herr",
            ],
          },
          "id": "tt0078788",
        },
        Object {
          "fields": Object {
            "actors": Array [
              "Ellen Burstyn",
              "Jared Leto",
              "Jennifer Connelly",
              "Marlon Wayans",
            ],
            "writers": Array [
              "Hubert Selby Jr.",
              "Darren Aronofsky",
            ],
          },
          "id": "tt0180093",
        },
      ],
      "sortedBy": "relevance",
    },
  },
}
`;

exports[`Hits Resolver should return as expected should provide sorting options 4`] = `
Object {
  "results": Object {
    "hits": Object {
      "items": Array [
        Object {
          "fields": Object {
            "actors": Array [
              "Christian Bale",
              "Heath Ledger",
              "Aaron Eckhart",
              "Michael Caine",
            ],
            "writers": Array [
              "Jonathan Nolan",
              "Christopher Nolan",
              "David S. Goyer",
              "Bob Kane",
            ],
          },
          "id": "tt0468569",
        },
        Object {
          "fields": Object {
            "actors": Array [
              "Tim Roth",
              "Amanda Plummer",
              "Laura Lovelace",
              "John Travolta",
            ],
            "writers": Array [
              "Quentin Tarantino",
              "Roger Avary",
            ],
          },
          "id": "tt0110912",
        },
        Object {
          "fields": Object {
            "actors": Array [
              "Noel Appleby",
              "Alexandra Astin",
              "Sean Astin",
              "David Aston",
            ],
            "writers": Array [
              "J.R.R. Tolkien",
              "Fran Walsh",
              "Philippa Boyens",
              "Peter Jackson",
            ],
          },
          "id": "tt0167260",
        },
        Object {
          "fields": Object {
            "actors": Array [
              "Morgan Freeman",
              "Andrew Kevin Walker",
              "Daniel Zacapa",
              "Brad Pitt",
            ],
            "writers": Array [
              "Andrew Kevin Walker",
            ],
          },
          "id": "tt0114369",
        },
        Object {
          "fields": Object {
            "actors": Array [
              "Michael Berryman",
              "Peter Brocco",
              "Dean R. Brooks",
              "Alonzo Brown",
            ],
            "writers": Array [
              "Lawrence Hauben",
              "Bo Goldman",
              "Ken Kesey",
              "Dale Wasserman",
            ],
          },
          "id": "tt0073486",
        },
        Object {
          "fields": Object {
            "actors": Array [
              "Russell Crowe",
              "Joaquin Phoenix",
              "Connie Nielsen",
              "Oliver Reed",
            ],
            "writers": Array [
              "David Franzoni",
              "John Logan",
              "William Nicholson",
            ],
          },
          "id": "tt0172495",
        },
        Object {
          "fields": Object {
            "actors": Array [
              "Andrew Lincoln",
              "Steven Yeun",
              "Chandler Riggs",
              "Norman Reedus",
            ],
            "writers": Array [
              "Frank Darabont",
            ],
          },
          "id": "tt1520211",
        },
        Object {
          "fields": Object {
            "actors": Array [
              "Jim Carrey",
              "Kate Winslet",
              "Gerry Robert Byrne",
              "Elijah Wood",
            ],
            "writers": Array [
              "Charlie Kaufman",
              "Michel Gondry",
              "Pierre Bismuth",
            ],
          },
          "id": "tt0338013",
        },
        Object {
          "fields": Object {
            "actors": Array [
              "Marlon Brando",
              "Martin Sheen",
              "Robert Duvall",
              "Frederic Forrest",
            ],
            "writers": Array [
              "John Milius",
              "Francis Ford Coppola",
              "Michael Herr",
            ],
          },
          "id": "tt0078788",
        },
        Object {
          "fields": Object {
            "actors": Array [
              "Ellen Burstyn",
              "Jared Leto",
              "Jennifer Connelly",
              "Marlon Wayans",
            ],
            "writers": Array [
              "Hubert Selby Jr.",
              "Darren Aronofsky",
            ],
          },
          "id": "tt0180093",
        },
      ],
      "sortedBy": "released",
    },
  },
}
`;

exports[`Hits Resolver should return as expected should return correct Results 2`] = `
Object {
  "results": Object {
    "hits": Object {
      "items": Array [
        Object {
          "fields": Object {
            "actors": Array [
              "Christian Bale",
              "Heath Ledger",
              "Aaron Eckhart",
              "Michael Caine",
            ],
            "writers": Array [
              "Jonathan Nolan",
              "Christopher Nolan",
              "David S. Goyer",
              "Bob Kane",
            ],
          },
          "id": "tt0468569",
        },
        Object {
          "fields": Object {
            "actors": Array [
              "Tim Roth",
              "Amanda Plummer",
              "Laura Lovelace",
              "John Travolta",
            ],
            "writers": Array [
              "Quentin Tarantino",
              "Roger Avary",
            ],
          },
          "id": "tt0110912",
        },
        Object {
          "fields": Object {
            "actors": Array [
              "Noel Appleby",
              "Alexandra Astin",
              "Sean Astin",
              "David Aston",
            ],
            "writers": Array [
              "J.R.R. Tolkien",
              "Fran Walsh",
              "Philippa Boyens",
              "Peter Jackson",
            ],
          },
          "id": "tt0167260",
        },
        Object {
          "fields": Object {
            "actors": Array [
              "Morgan Freeman",
              "Andrew Kevin Walker",
              "Daniel Zacapa",
              "Brad Pitt",
            ],
            "writers": Array [
              "Andrew Kevin Walker",
            ],
          },
          "id": "tt0114369",
        },
        Object {
          "fields": Object {
            "actors": Array [
              "Michael Berryman",
              "Peter Brocco",
              "Dean R. Brooks",
              "Alonzo Brown",
            ],
            "writers": Array [
              "Lawrence Hauben",
              "Bo Goldman",
              "Ken Kesey",
              "Dale Wasserman",
            ],
          },
          "id": "tt0073486",
        },
        Object {
          "fields": Object {
            "actors": Array [
              "Russell Crowe",
              "Joaquin Phoenix",
              "Connie Nielsen",
              "Oliver Reed",
            ],
            "writers": Array [
              "David Franzoni",
              "John Logan",
              "William Nicholson",
            ],
          },
          "id": "tt0172495",
        },
        Object {
          "fields": Object {
            "actors": Array [
              "Andrew Lincoln",
              "Steven Yeun",
              "Chandler Riggs",
              "Norman Reedus",
            ],
            "writers": Array [
              "Frank Darabont",
            ],
          },
          "id": "tt1520211",
        },
        Object {
          "fields": Object {
            "actors": Array [
              "Jim Carrey",
              "Kate Winslet",
              "Gerry Robert Byrne",
              "Elijah Wood",
            ],
            "writers": Array [
              "Charlie Kaufman",
              "Michel Gondry",
              "Pierre Bismuth",
            ],
          },
          "id": "tt0338013",
        },
        Object {
          "fields": Object {
            "actors": Array [
              "Marlon Brando",
              "Martin Sheen",
              "Robert Duvall",
              "Frederic Forrest",
            ],
            "writers": Array [
              "John Milius",
              "Francis Ford Coppola",
              "Michael Herr",
            ],
          },
          "id": "tt0078788",
        },
        Object {
          "fields": Object {
            "actors": Array [
              "Ellen Burstyn",
              "Jared Leto",
              "Jennifer Connelly",
              "Marlon Wayans",
            ],
            "writers": Array [
              "Hubert Selby Jr.",
              "Darren Aronofsky",
            ],
          },
          "id": "tt0180093",
        },
      ],
      "sortedBy": null,
    },
  },
}
`;

exports[`Hits Resolver should return as expected should return correct Results on page 2 2`] = `
Object {
  "results": Object {
    "hits": Object {
      "items": Array [
        Object {
          "fields": Object {
            "actors": Array [
              "Christian Bale",
              "Heath Ledger",
              "Aaron Eckhart",
              "Michael Caine",
            ],
            "writers": Array [
              "Jonathan Nolan",
              "Christopher Nolan",
              "David S. Goyer",
              "Bob Kane",
            ],
          },
          "id": "tt0468569",
        },
        Object {
          "fields": Object {
            "actors": Array [
              "Tim Roth",
              "Amanda Plummer",
              "Laura Lovelace",
              "John Travolta",
            ],
            "writers": Array [
              "Quentin Tarantino",
              "Roger Avary",
            ],
          },
          "id": "tt0110912",
        },
        Object {
          "fields": Object {
            "actors": Array [
              "Noel Appleby",
              "Alexandra Astin",
              "Sean Astin",
              "David Aston",
            ],
            "writers": Array [
              "J.R.R. Tolkien",
              "Fran Walsh",
              "Philippa Boyens",
              "Peter Jackson",
            ],
          },
          "id": "tt0167260",
        },
        Object {
          "fields": Object {
            "actors": Array [
              "Morgan Freeman",
              "Andrew Kevin Walker",
              "Daniel Zacapa",
              "Brad Pitt",
            ],
            "writers": Array [
              "Andrew Kevin Walker",
            ],
          },
          "id": "tt0114369",
        },
        Object {
          "fields": Object {
            "actors": Array [
              "Michael Berryman",
              "Peter Brocco",
              "Dean R. Brooks",
              "Alonzo Brown",
            ],
            "writers": Array [
              "Lawrence Hauben",
              "Bo Goldman",
              "Ken Kesey",
              "Dale Wasserman",
            ],
          },
          "id": "tt0073486",
        },
        Object {
          "fields": Object {
            "actors": Array [
              "Russell Crowe",
              "Joaquin Phoenix",
              "Connie Nielsen",
              "Oliver Reed",
            ],
            "writers": Array [
              "David Franzoni",
              "John Logan",
              "William Nicholson",
            ],
          },
          "id": "tt0172495",
        },
        Object {
          "fields": Object {
            "actors": Array [
              "Andrew Lincoln",
              "Steven Yeun",
              "Chandler Riggs",
              "Norman Reedus",
            ],
            "writers": Array [
              "Frank Darabont",
            ],
          },
          "id": "tt1520211",
        },
        Object {
          "fields": Object {
            "actors": Array [
              "Jim Carrey",
              "Kate Winslet",
              "Gerry Robert Byrne",
              "Elijah Wood",
            ],
            "writers": Array [
              "Charlie Kaufman",
              "Michel Gondry",
              "Pierre Bismuth",
            ],
          },
          "id": "tt0338013",
        },
        Object {
          "fields": Object {
            "actors": Array [
              "Marlon Brando",
              "Martin Sheen",
              "Robert Duvall",
              "Frederic Forrest",
            ],
            "writers": Array [
              "John Milius",
              "Francis Ford Coppola",
              "Michael Herr",
            ],
          },
          "id": "tt0078788",
        },
        Object {
          "fields": Object {
            "actors": Array [
              "Ellen Burstyn",
              "Jared Leto",
              "Jennifer Connelly",
              "Marlon Wayans",
            ],
            "writers": Array [
              "Hubert Selby Jr.",
              "Darren Aronofsky",
            ],
          },
          "id": "tt0180093",
        },
      ],
      "sortedBy": null,
    },
  },
}
`;

exports[`Hits Resolver should return as expected should return correct highlight Results 2`] = `
Object {
  "results": Object {
    "hits": Object {
      "items": Array [
        Object {
          "fields": Object {
            "actors": Array [
              "Tom Neal",
              "Ann Savage",
              "Claudia Drake",
              "Edmund MacDonald",
            ],
            "writers": Array [
              "Martin Goldsmith",
              "Martin Goldsmith",
            ],
          },
          "highlight": "{}",
          "id": "tt0037638",
        },
        Object {
          "fields": Object {
            "actors": Array [
              "Al Gore",
              "Billy West",
            ],
            "writers": Array [],
          },
          "highlight": "{\\"actors\\":[\\"<em>Al</em> Gore\\"]}",
          "id": "tt0497116",
        },
        Object {
          "fields": Object {
            "actors": Array [
              "Samir Khader",
              "Josh Rushing",
              "George W. Bush",
              "Hassan Ibrahim",
            ],
            "writers": Array [
              "Julia Bacha",
              "Jehane Noujaim",
            ],
          },
          "highlight": "{}",
          "id": "tt0391024",
        },
        Object {
          "fields": Object {
            "actors": Array [
              "Kevin Costner",
              "Sean Connery",
              "Charles Martin Smith",
              "Andy Garcia",
            ],
            "writers": Array [
              "Oscar Fraley",
              "David Mamet",
            ],
          },
          "highlight": "{}",
          "id": "tt0094226",
        },
        Object {
          "fields": Object {
            "actors": Array [
              "Jon Lovitz",
              "Nancy Cartwright",
              "Christine Cavanaugh",
              "Gerrit Graham",
            ],
            "writers": Array [
              "Al Jean",
              "Mike Reiss",
            ],
          },
          "highlight": "{\\"writers\\":[\\"<b>Al</b> Jean\\"]}",
          "id": "tt0108734",
        },
        Object {
          "fields": Object {
            "actors": Array [
              "Penelope Allen",
              "Gordon MacDonald",
              "Madison Arnold",
              "Vincent Angell",
            ],
            "writers": Array [
              "William Shakespeare",
              "Al Pacino",
            ],
          },
          "highlight": "{\\"writers\\":[\\"<b>Al</b> Pacino\\"]}",
          "id": "tt0116913",
        },
        Object {
          "fields": Object {
            "actors": Array [
              "'Weird Al' Yankovic",
              "Victoria Jackson",
              "Kevin McCarthy",
              "Michael Richards",
            ],
            "writers": Array [
              "'Weird Al' Yankovic",
              "Jay Levey",
            ],
          },
          "highlight": "{\\"actors\\":[\\"'Weird <em>Al</em>' Yankovic\\"],\\"writers\\":[\\"'Weird <b>Al</b>' Yankovic\\"]}",
          "id": "tt0098546",
        },
        Object {
          "fields": Object {
            "actors": Array [
              "Jim Lovell",
              "Russell Schweickart",
              "Eugene Cernan",
              "Michael Collins",
            ],
            "writers": Array [],
          },
          "highlight": "{}",
          "id": "tt0097372",
        },
        Object {
          "fields": Object {
            "actors": Array [
              "Buster Keaton",
              "Marion Mack",
              "Glen Cavender",
              "Jim Farley",
            ],
            "writers": Array [
              "Buster Keaton",
              "Clyde Bruckman",
              "Al Boasberg",
            ],
          },
          "highlight": "{\\"writers\\":[\\"<b>Al</b> Boasberg\\"]}",
          "id": "tt0017925",
        },
        Object {
          "fields": Object {
            "actors": Array [
              "James Caan",
              "Billy Dee Williams",
              "Jack Warden",
              "Bernie Casey",
            ],
            "writers": Array [
              "Gale Sayers",
              "Al Silverman",
              "William Blinn",
            ],
          },
          "highlight": "{\\"writers\\":[\\"<b>Al</b> Silverman\\"]}",
          "id": "tt0068315",
        },
      ],
      "sortedBy": null,
    },
  },
}
`;
